# project-untamo

./: .gitignore  README.md  build.sh  build_desktop.sh
back/: README.md  package-lock.json  package.json  readFileAsJson.js  server.js  static_resources.py
back/audioresources/: analog-watch.opus
back/models/: admin.js  alarm.js  device.js  qrpair.js  session.js  user.js
back/modules/: form_screenname.js  formcheck.js  register.js
back/resources/: Rooster.opus.b64  resource_list.json
back/routes/: adminrote.js  adminroute.js  apiroute.js
back_go/: .gitignore  activation-captcha  build_amd64.sh  build_arm64.sh  go.mod  go.sum  main.go  untamo_server.upx
back_go/actions/checkers/: checkers.go
back_go/actions/rest/: rest.go
back_go/actions/wshandler/: wshandler.go
back_go/audio-resources/: analog-watch.opus  rooster.opus
back_go/database/: database.go
back_go/database/mongoDB/: mongoDB.go
back_go/database/sqliteDB/: sqliteDB.go
back_go/db/mongoDB/: mongoDB.go
back_go/middleware/: middleware.go
back_go/models/admin/: admin.go
back_go/models/alarm/: alarm.go
back_go/models/device/: device.go
back_go/models/email/: email.go
back_go/models/login/: login.go
back_go/models/qr/: qr.go
back_go/models/register/: register.go
back_go/models/session/: session.go
back_go/models/timer/: timer.go
back_go/models/update/: update.go
back_go/models/user/: user.go
back_go/models/wsOut/: wsOut.go
back_go/utils/appconfig/: appconfig.go
back_go/utils/dbConnection/: dbConnection.go
back_go/utils/email/: email.go
back_go/utils/emailer/: emailer.go
back_go/utils/hash/: hash.go
back_go/utils/id/: id.go
back_go/utils/list/: list.go
back_go/utils/now/: now.go
back_go/utils/token/: token.go
back_go/utils/tools/: tools.go
back_rs/untamo_server/: Cargo.toml
back_rs/untamo_server/src/: form_check.rs  main.rs  messages.rs  password_hash.rs  start_action_connection.rs  target.rs  utils.rs  ws.rs  ws_client.rs
desktop/AudioPlay/untamo_audio_play/: Cargo.toml
desktop/AudioPlay/untamo_audio_play/src/: main.rs
desktop/Untamo/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
desktop/Untamo/src/: App.css  App.tsx  PasswordForgot.tsx  ResetPassword.tsx  main.tsx  stores.ts  type.ts  utils.ts
desktop/Untamo/src-tauri/: Cargo.toml  callnim.nim  tauri.conf.json
desktop/Untamo/src-tauri/audio/: rooster.flac
desktop/Untamo/src-tauri/bins/: untamo_audio_play-x86_64-unknown-linux-gnu
desktop/Untamo/src-tauri/capabilities/: default.json
desktop/Untamo/src-tauri/icons/: icon.icns
desktop/Untamo/src-tauri/src/: audio.rs  main.rs
dioxus/: Cargo.toml  index.html  serve.py
dioxus/pkg/: untamo-dioxus.wasm  untamo_dioxus_lib.js  untamo_dioxus_lib.wasm  untamo_dioxus_lib_bg.wasm
dioxus/src/: lib.rs  main.rs  main_web.rs  styles.css
dioxus/src/stores/: mod.rs
front/: DeleteAlarm.js  README.md  gitclean.sh  index.html  package-lock.json  package.json  test-page.mjs  test_audio.cjs  test_audio.js  test_audio2.cjs  test_play.cjs  tsconfig.app.json  vite.config.ts
front.old/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front.old/src/: App.css  App.tsx  main.tsx  stores.ts  ui.css
front.old/src/components/: About.tsx  AppAlert.tsx  Clueless.tsx  EnumToMenu.tsx  LogIn.tsx  NavGrid.tsx  OptionsToRadio.tsx  PasswordForgot.tsx  ResendActivation.tsx  ResetPassword.tsx  ServerLocation.tsx  Welcome.tsx  notification.ts  ui.tsx
front.old/src/stores/: alarmStore.ts  audioDatabase.ts  settingsStore.ts
front/clueless/: index.html
front/login/: index.html
front/public/: index.html
front/src/: App.css  App.js  App.tsx  SelectWeekdays.js  index.css  index.js  main.tsx  stores.ts  type.d.ts  type.ts  ui.css  utils.ts  vite-env.d.ts
front/src/audiostorage/: audioDatabase.js  audioDatabase.ts  audioDatabaseHandler.js
front/src/components/: About.js  About.tsx  AddAlarm.js  AddAlarmDrawer.js  AddDevice.js  Admin.js  AdminConfirm.js  AdminLogIn.js  AlarmChecker.js  AlarmClockIcon.js  AlarmNotification.js  AlarmWatcher.js  Alarms.js  Alarmsi.js  AlertDialogDisplay.js  AppAlert.js  AppAlert.tsx  AudioPlayer.js  BackgroundProcesses.js  Clueless.js  Clueless.tsx  DeleteAlarm.js  DeviceChecker.js  DeviceDelete.js  DeviceEdit.js  DeviceIcons.js  DeviceMenu.js  DeviceMenuActions.js  DeviceSelector.js  EditAlarm.js  EditProfile.js  EnumToMenu.tsx  GenerateQRPairingKey.js  LogIn.js  LogIn.tsx  LogOut.js  NavGrid.css  NavGrid.js  NavGrid.tsx  (+28 more)
front/test/: check_page.mjs
iced-gui/: Cargo.toml  untamo.desktop
iced-gui/src/: audio.rs  constants.rs  main.rs  messages.rs  state.rs  storage.rs  theme.rs  tray.rs  update.rs  views.rs  websocket.rs
iced-gui/src/components/: about.rs  add_alarm.rs  alarm_pop.rs  alarms.rs  buttons.rs  colors.rs  confirm_dialog.rs  countdown.rs  devices.rs  edit_profile.rs  icons.rs  login.rs  mod.rs  navbar.rs  notifications.rs  play_alarm.rs  qr_scanner.rs  register.rs  settings.rs  stopwatch.rs  toggle.rs  user_menu.rs  welcome.rs
iced-gui/src/update/: alarm.rs  auth.rs  countdown.rs  devices.rs  helpers.rs  mod.rs  settings.rs  stopwatch.rs  window.rs
misc/experimental/: PlayAlarm_animation_crap.js  README.md
misc/nginx/: default
mobile/: AddDevice.js  App.js  App.tsx  DeviceSelector.js  LogIn.js  ScanQR.js  Welcome.js  app.json  fetchDevices.js  package-lock.json  package.json  stores.ts  type.ts
mobile/components/: AddAlarm.js  AddDevice.js  AlarmButton.js  AlarmView.js  AlarmWatcher.js  Alarms.js  DeleteAlarm.js  DeviceSelector.js  DeviceTypes.js  EditAlarm.js  EditDrawer.js  EditDrawer.tsx  LogIn.js  LogOut.js  Notification.tsx  PlayAlarm.js  QrScanner.js  QrWindow.js  SVGButton.js  ServerAddress.js  UserWatcher.js  Welcome.js  Welcome.tsx  calcAlarmTime.js  fetchAlarms.js  fetchDevices.js  logo.svg.b64  sleep.js  websocketAddress.js
mobile/context/: DeviceContext.js
mobile/stores/: QRStore.ts  alarmStore.ts  audioStore.ts  deviceStore.ts  loginStore.ts  messageStore.ts  popUpStore.ts  serverStore.ts  timeouts.ts
(+394 files in other folders)
