[package]
name = "untamo-dioxus"
version = "0.2.0"
edition = "2021"

[lib]
name = "untamo_dioxus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "untamo-dioxus"
path = "src/main.rs"

[target.wasm32-unknown-unknown]
runner = "dioxus-run-web"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true