[package]
name = "iced-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "untamo"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["image", "svg", "tokio"] }
iced_widget = { version = "0.14", features = ["svg"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rqrr = "0.8"
v4l = "0.14"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3"
crossbeam-channel = "0.5"
url = "2"
rodio = { version = "0.17", features = ["symphonia-all"] }

