[package]
name = "iced-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "untamo"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["image", "svg", "tokio", "canvas"] }
iced_widget = { version = "0.14", features = ["svg"] }
iced_aw = { version = "0.13", features = ["color_picker", "date_picker", "time_picker", "selection_list", "menu"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rqrr = "0.8"
v4l = "0.14"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3"
crossbeam-channel = "0.5"
url = "2"
rodio = { version = "0.17", features = ["symphonia-all"] }
machineid-rs = "1.2.4"
dirs = "5"
chrono = "0.4"
aes = "0.8"
cbc = "0.1"
getrandom = "0.2"
base64 = "0.21"
tray-icon = { version = "0.19", features = ["common-controls-v6"] }
gtk = { version = "0.18", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

