[package]
name = "untamo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
serde = { version = "1.0.160", features = ["derive"] }
rand = "0.8.5"
serde_json = "1"
futures = "0.3"
actix-rt = "2.2"
argon2 = "0.5.0"
mongodb = "2"
dotenv = "0.15"
zxcvbn = "2.2.2"
regex = "1.8.0"
clap = "4.2.4"
radix_fmt = "1.0.0"
itertools = "0.10.0"
