[package]
name = "untamo_audio_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio="0.17.1"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
strip = true # Remove debug symbols
