[package]
name = "Untamo"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
chrono = { version = "0.4", features = ["clock", "now"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode-generator = "5"
itertools = "0.14"
rodio = { version = "0.20", features = ["symphonia-all"] }
